--- a/webshop/webapp/view/ProductDetail.view.xml
+++ b/webshop/webapp/view/ProductDetail.view.xml
@@ -32,7 +32,7 @@
 						<Label id="descriptionLbl" text="{i18n>detail.description}"/>
 						<Text id="descriptionTxt" text="{EspmModel>LongDescription}"/>
 						<Label id="supplierLbl" text="{i18n>detail.supplierInfo}"/>
-						<Link class="sapUiForceWidthAuto" id="supplierLink" press="onSupplierPressed" text="ITelo"/>
+						<Link class="sapUiForceWidthAuto" id="supplierLink" press="onSupplierPressed" text="{EspmModel>SupplierName}"/>
 						<!-- <Label id="ratingLbl" text="{i18n>xfld.reviews}"></Label>
 						<shop:RatingAndCount enabled="true" iconSize="1rem" id="ratingCount" maxRatingValue="5" press="onRatingPressed" ratingCount="{RatingCount}"
 							value="{AverageRating}" verticalAdjustment="-15" verticalAlignContent="true"/> -->
